--- a/cities.html
+++ b/cities.html
@@ -1,34 +1,35 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Git Collab Exercise</title>
-    <style type="text/css">
-      body {
-        font-size: 2em;
-      }
-    </style>
-  </head>
-  <body>
-    <h1>Top cities, by population</h1>
 
-    <p>
-      Taken (borrowed?) from
-      <a
-        href="http://en.wikipedia.org/wiki/List_of_cities_proper_by_population"
-        target="_blank"
-      >
-        Wikipedia
-      </a>
-    </p>
+<head>
+  <title>Git Collab Exercise</title>
+  <style type="text/css">
+    body {
+      font-size: 2em;
+    }
+  </style>
+</head>
 
-    <hr />
+<body>
+  <h1>Top cities, by population</h1>
 
-    <ol>
-      <li>Shanghai (17,836,133)</li>
-      <li>Istanbul (13,854,740)</li>
-      <li>Karachi (12,991,000)</li>
-      <li>Mumbai (12,478,447)</li>
-      <li>Sao Paulo</li>
-    </ol>
-  </body>
+  <p>
+    Taken (borrowed?) from
+    <a href="http://en.wikipedia.org/wiki/List_of_cities_proper_by_population" target="_blank">
+      Wikipedia
+    </a>
+  </p>
+
+  <hr />
+
+  <ol>
+    <li>Calgary</li>
+    <li>Shanghai (17,836,133)</li>
+    <li>Istanbul (13,854,740)</li>
+    <li>Karachi (12,991,000)</li>
+    <li>Mumbai (12,478,447)</li>
+    <li>Sao Paulo</li>
+  </ol>
+</body>
+
 </html>
